[package]
name = "lazers-changes-stream"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]
serde = "0.7.4"
serde_json = "0.7.4"

[dev-dependencies]
hyper = "0.9.0"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_changes_stream"
