[package]
name = "lazers-changes-stream"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]
serde = "0.9.0"
serde_json = "0.9.0"
serde_derive = "0.9.0"

[dev-dependencies]
hyper = "0.9.0"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_changes_stream"
path = "src/lib.rs"
