[package]
name = "lazers-db"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]

[dependencies.lazers-traits]
path = "../lazers-traits"

[dependencies.lazers-hashmap]
path = "../lazers-hashmap"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_db"
