[package]
name = "lazers-hyper-client"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]
hyper = "0.9.10"
url = "1.1.1"
serde = "0.7.4"
serde_json = "0.7.4"

[dependencies.lazers-traits]
path = "../lazers-traits"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_hyper_client"
