[package]
name = "lazers-hyper-client"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]
backtrace = "0.2.3"
hyper = "0.9.10"
url = "1.1.1"
serde = "0.8.0"
serde_json = "0.8.0"
mime = "0.2.1"

[dependencies.lazers-traits]
path = "../lazers-traits"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_hyper_client"
