[package]
name = "lazers-hyper-client"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "tango-build.rs"

[dependencies]
backtrace = "0.3.0"
hyper = "0.10.0"
url = "1.4.0"
serde = "0.9.0"
serde_json = "0.9.0"
serde_derive = "0.9.0"
mime = "0.2.1"
futures = "0.1.10"

[dependencies.lazers-traits]
path = "../lazers-traits"

[build-dependencies]
tango = "0.5.0"

[lib]
name = "lazers_hyper_client"
path = "src/lib.rs"
