[package]
name = "lazers-liblazers"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

build = "build.rs"

[dependencies]
libc = "0.2.20"

[dependencies.lazers-traits]
path = "../lazers-traits"

[dependencies.lazers-hyper-client]
path = "../lazers-hyper-client"

[build-dependencies]
tango = "0.5.0"
rusty-cheddar = "0.3.0"

[lib]
crate-type = ["dylib"]
name = "lazers_liblazers"
path = "src/lib.rs"
